fix: prevent overflow in mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,5 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
+  min-width: 0; // Fixes overflow potential issues with flexbox children
 }
